- license minor fixes, gitignore & friends

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
-blib*
-Makefile
-Makefile.old
-Build
-_build*
-pm_to_blib*
-*.tar.gz
-.lwpcookies
+!.gitignore
+Makefile*
+!Makefile.PL
+META.yml
+blib
+build
+inc
+pm_to_blib
+MANIFEST*
+!MANIFEST.SKIP
+Debian*
+README
 Data-DPath-*
 cover_db
-MANIFEST.bak
-META.yml
-
