What did you, see old man? -- Dist::jira ... Dist::jira.
Dist::Zilla roundhouse kick.

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
+.*
 !.gitignore
-Makefile*
-!Makefile.PL
-META.yml
-blib
-build
-inc
-pm_to_blib
-MANIFEST*
-!MANIFEST.SKIP
-Debian*
 Data-DPath-*
-cover_db
-nytprof.out
-nytprof*
-benchmarks_*
+Debian_CPANTS.txt
