--- a/dist.ini
+++ b/dist.ini
@@ -9,5 +9,6 @@ static_version = 0.45
 repository_at = github
 repository = git://github.com/renormalist/data-dpath.git
 repository_web = http://github.com/renormalist/data-dpath
+disable_trailing_whitespace_tests = 1
 
 [ManifestSkip]
