relax dependency to Safe 2.30
only set dependency in meta but do
not require it at runtime so an existing
older Safe can try to work 'good enough'.

--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,6 @@ repository_web = http://github.com/renormalist/data-dpath
 disable_trailing_whitespace_tests = 1
 
 [ManifestSkip]
+
+[Prereqs]
+Safe = 2.30
