Make sure feature.pm is only test.recommends, as is optional before 5.10

--- a/dist.ini
+++ b/dist.ini
@@ -14,3 +14,8 @@ disable_trailing_whitespace_tests = 1
 
 [Prereqs]
 Safe = 2.30
+
+[Prereqs::Soften]
+to_relationship = recommends
+copy_to = develop.requires
+module = feature
